--- a/composer.json
+++ b/composer.json
@@ -5,34 +5,29 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "4.3.*",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/expression-language": "4.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "4.3.*",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/http-client": "4.3.*",
-        "symfony/intl": "4.3.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
-        "symfony/process": "4.3.*",
-        "symfony/security-bundle": "4.3.*",
-        "symfony/serializer-pack": "*",
-        "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/translation": "4.3.*",
-        "symfony/twig-bundle": "4.3.*",
-        "symfony/validator": "4.3.*",
-        "symfony/web-link": "4.3.*",
-        "symfony/yaml": "4.3.*"
+        "sensio/framework-extra-bundle": "5.3.1",
+        "symfony/console": "4.3.2",
+        "symfony/dotenv": "4.3.2",
+        "symfony/expression-language": "4.3.2",
+        "symfony/flex": "1.4.1",
+        "symfony/framework-bundle": "4.3.2",
+        "symfony/http-client": "4.3.2",
+        "symfony/intl": "4.3.2",
+        "symfony/monolog-bundle": "3.4.0",
+        "symfony/orm-pack": "1.0.6",
+        "symfony/process": "4.3.2",
+        "symfony/security-bundle": "4.3.2",
+        "symfony/serializer-pack": "1.0.2",
+        "symfony/validator": "4.3.2",
+        "symfony/web-link": "4.3.2",
+        "symfony/yaml": "4.3.2"
     },
     "require-dev": {
-        "symfony/debug-pack": "*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.3.*"
+        "symfony/debug-pack": "1.0.7",
+        "symfony/maker-bundle": "1.11.6",
+        "symfony/profiler-pack": "1.0.4",
+        "symfony/test-pack": "1.0.6",
+        "symfony/web-server-bundle": "4.3.2"
     },
     "config": {
         "preferred-install": {
@@ -76,7 +71,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "4.3.2"
         }
     }
 }
