--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+popular_word_score:
+    path: /score
+    controller: App\Controller\PopularWordController::getScore
