--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,34 @@
 language: php
-php:
-  - '7.2'
-install:
-    - composer install
-    - cp .env.dist .env
-    - php bin/console doctrine:schem:update --force
-script:
-    - php bin/phpunit
+sudo: false
+
+cache:
+  yarn: true
+  directories:
+    - $HOME/.composer/cache/files
+    - ./bin/.phpunit
+
 env:
-    - SYMFONY_VERSION="4.3.1" DB=mysql
+  global:
+    - SYMFONY_PHPUNIT_DIR=./bin/.phpunit
+    - SYMFONY_DEPRECATIONS_HELPER=29
+
+matrix:
+  fast_finish: true
+  include:
+    - php: 7.2
+
+before_install:
+  - composer self-update
+
+install:
+  - composer install
+  - cp .env.dist .env
+  - php bin/console doctrine:schem:update --force
+  - ./bin/phpunit install
+
+script:
+  - ./bin/phpunit
+  # this checks that the YAML config files contain no syntax errors
+  - ./bin/console lint:yaml config
+  # this checks that the application doesn't use dependencies with known security vulnerabilities
+  - ./bin/console security:check
