--- a/.env.dist
+++ b/.env.dist
@@ -24,5 +24,5 @@ APP_SECRET=dac03d3208b279e40bb45ff1698c59cf
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL="mysql://user:pass@127.0.0.1:3306/popular_words?charset=utf8mb4&serverVersion=5.7"
+DATABASE_URL="mysql://root:pass@127.0.0.1:3306/popular_words?charset=utf8mb4&serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
