--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ cache:
     - $HOME/.composer/cache/files
     - ./bin/.phpunit
 
+services:
+    - mysql
+
 env:
   global:
     - SYMFONY_PHPUNIT_DIR=./bin/.phpunit
@@ -19,6 +22,9 @@ matrix:
 
 before_install:
   - composer self-update
+  - sudo mysql -e "use mysql; update user set authentication_string=PASSWORD('pass') where User='root'; update user set plugin='mysql_native_password';FLUSH PRIVILEGES;"
+  - sudo mysql_upgrade -u root -ppass
+  - sudo service mysql restart
 
 install:
   - composer install
@@ -28,7 +34,4 @@ install:
 
 script:
   - ./bin/phpunit
-  # this checks that the YAML config files contain no syntax errors
   - ./bin/console lint:yaml config
-  # this checks that the application doesn't use dependencies with known security vulnerabilities
-  - ./bin/console security:check
